--- a/covidWarehouse/manuscript/references.bib
+++ b/covidWarehouse/manuscript/references.bib
@@ -1,10 +1,45 @@
 
 
 
+@article{Kucirka2020,
+author = {Kucirka, Lauren M. and Lauer, Stephen A. and Laeyendecker, Oliver and Boon, Denali and Lessler, Justin},
+doi = {10.7326/M20-1495},
+journal = {Annals of Internal Medicine},
+month = {may},
+pages = {M20--1495},
+pmid = {32422057},
+title = {{Variation in False-Negative Rate of Reverse Transcriptase Polymerase Chain Reaction–Based SARS-CoV-2 Tests by Time Since Exposure}},
+year = {2020}
+}
 
 
+@article{KaiWang2020,
+title = "Temporal profiles of viral load in posterior oropharyngeal saliva samples and serum antibody responses during infection by SARS-CoV-2: an observational cohort study",
+journal = "The Lancet Infectious Diseases",
+volume = "20",
+number = "5",
+pages = "565 - 574",
+year = "2020",
+doi = "https://doi.org/10.1016/S1473-3099(20)30196-1",
+author = "Kelvin Kai-Wang To and Owen Tak-Yin Tsang and Wai-Shing Leung and Anthony Raymond Tam and Tak-Chiu Wu and David Christopher Lung and Cyril Chik-Yan Yip and Jian-Piao Cai and Jacky Man-Chun Chan and Thomas Shiu-Hong Chik and Daphne Pui-Ling Lau and Chris Yau-Chung Choi and Lin-Lei Chen and Wan-Mui Chan and Kwok-Hung Chan and Jonathan Daniel Ip and Anthony Chin-Ki Ng and Rosana Wing-Shan Poon and Cui-Ting Luo and Vincent Chi-Chung Cheng and Jasper Fuk-Woo Chan and Ivan Fan-Ngai Hung and Zhiwei Chen and Honglin Chen and Kwok-Yung Yuen"
+
+}
 
 # Reports
+
+@misc{cisbulletin2020,
+author = {{England Office for National Statistics}},
+title = {{Coronavirus (COVID-19) Infection Survey pilot: 18 June 2020}},
+url = {https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/conditionsanddiseases/bulletins/coronaviruscovid19infectionsurveypilot/latest#covid-19-infection-survey-data},
+note = {Accessed: 2020-06-19}
+}
+
+@misc{cisdata2020,
+author = {{England Office for National Statistics}},
+title = {{COVID-19 Infection Survey Datasets}},
+url = {https://www.ons.gov.uk/file?uri=%2fpeoplepopulationandcommunity%2fhealthandsocialcare%2fconditionsanddiseases%2fdatasets%2fcoronaviruscovid19infectionsurveydata%2f2020/covid19infectionsurveydatasets20200618full1.xlsx},
+note = {Accessed: 2020-06-19}
+}
 
 @misc{hscni2020,
 author = {{Northern Ireland Health and Social Care Board}},
